--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: CSP events mangager app.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,6 +23,11 @@ dependencies:
   google_maps_flutter: ^0.5.27+1
   table_calendar: ^2.2.3
   http: ^0.12.1
+  sembast: ^2.4.4+3
+  path_provider: ^1.6.10
+#  bloc: ^4.0.0
+#  flutter_bloc: ^4.0.0
+#  hydrated_bloc: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
